CMAKE_MINIMUM_REQUIRED(VERSION 3.23 FATAL_ERROR)

SET_PROPERTY(CACHE CMAKE_INSTALL_PREFIX PROPERTY VALUE "../")

PROJECT(GodotForceField)

ADD_SUBDIRECTORY(godot-cpp)

IF (NOT DEFINED BITS)
    MATH(EXPR BITS "8*${CMAKE_SIZEOF_VOID_P}")
ENDIF()

SET(TARGET ${PROJECT_NAME}.${CMAKE_SYSTEM_NAME}.${CMAKE_BUILD_TYPE}.${BITS})

STRING(TOLOWER ${TARGET} TARGET)

FILE(GLOB_RECURSE SOURCES extension-src/*.c**)

ADD_LIBRARY(${TARGET} SHARED ${SOURCES})

TARGET_LINK_LIBRARIES(${TARGET} PRIVATE godot::cpp)

SET_PROPERTY(TARGET ${TARGET} PROPERTY CXX_STANDARD 17)

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    TARGET_COMPILE_OPTIONS(${TARGET} PRIVATE /std:c++17)
    IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
        # If target is debug build, setup proper runtime library (mainly to match godot-cpp one).
        SET(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
    ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)
ENDIF()

INSTALL(TARGETS ${TARGET} DESTINATION ${CMAKE_SOURCE_DIR}/project/extensions/force-field/)
INSTALL(DIRECTORY extension-src/shaders DESTINATION ${CMAKE_SOURCE_DIR}/project/extensions/force-field/)